...
                                  setState(() {
                                    selectedAnswer = null;
                                    currentQuestion++;
                                  });
                                }
                              },
                        child: Text(currentQuestion == 3 ? "Submit" : "Next"),
                      ),
                    ],
                  ),
                ],
              ),
          ],
...
